---------------------------------------------------------------------------------------------------
Version: 4.2.68
BNO Assembling Machines:
- Big Red ASM's - limit crafting speed to 10 max.
  Power usage set to an exponentially increasing amount based on max level.
  Some of the lower levels will be lower power usage than before since the levels were flatter levels.
BNO Roboport:
- Selection and collision box increased a bit, to cover more of the image. 
---------------------------------------------------------------------------------------------------
Version: 4.2.67
- Changed how fluids flow through Big Red Assembling Machines. This should fix say an ASM making 
  Rocket fuel with output of a pipe into an ASM making solid fuel via light oil.
- Someone joining, watching but not joining gamee, quiting, then later rejoining could be thrown 
  into a random location in the game. This is fixed.
---------------------------------------------------------------------------------------------------
Version: 4.2.66
  NEW FEATURES:
- Big Red asm will be outfit with fluid support, and it should look, act pretty cool. 
  Dual input and dual output on each side of the assembling machine.
- DangOreus: increased the clear space around the oil spots by a few tiles. Enabling 5 petro 
  refineries or 4 advanced refineries for a small oil processing area.
- Added support for ClaustOrePhobic. Recommend turning on mod setting "Enable Custom Difficulty"
  and using a prototype list of:
  inserter transport-belt splitter underground-belt electric-pole pipe pipe-to-ground pump container 
  logistic-container storage-tank offshore-pump wall gate roboport ammo-turret wall

  BUGS FIXED: 
  All bug fixes will update your save, by adding this version to your mods folder.
- A race condition occurs when your big red asm is about to explode, you tag it for deletion, but it 
  explodes before the bots get to pick it up. The crash that occurs when this happens is 