@@ -12,8 +12,8 @@ roboport-bno=Brave New Roboport
 [entity-description]
 roboport-bno=Larger roboport, that makes biters really mad, and connects a larger logistics and construction network with other roboports used by construction and logistic robots.
 assembling-machine-4=Faster assembling machine, that consumes more power. Does NOT explode!
-assembling-machine-5=Faster assembling machine, that consumes more power, and based on host's choice, may takes 5% damage every second. When it reach's 0% healthy it may explode.
-assembling-machine-6=Faster assembling machine, that consumes more power, and based on host's choice, may takes 5% damage every second. When it reach's 0% healthy it may explode.
+assembling-machine-5=Faster assembling machine, that consumes more power, and based on host's choice, may takes 4% damage every second. When it reach's 0% healthy it may explode.
+assembling-machine-6=Faster assembling machine, that consumes more power, and based on host's choice, may takes 3.33% damage every second. When it reach's 0% healthy it may explode.
 
 [mod-setting-name]
 bno-num-starting-bots=Number of Bots
